--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
     "@types/socket.io": "^2.1.11",
+    "dotenv": "^8.2.0",
     "eslint": "^7.9.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
