--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,15 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/socket.io-client": "^1.4.33",
-    "copyfiles": "^2.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "socket.io-client": "^2.3.0",
+    "the-game-lib": "^1.0.1",
     "typescript": "^3.9"
   },
   "scripts": {
-    "start": "copyfiles --up 1 --error ../common/**/*.ts src && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
