--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/socket.io-client": "^1.4.33",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
     "react-scripts": "3.4.3",
     "socket.io-client": "^2.3.0",
     "the-game-lib": "^1.0.4",
