--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/socket.io-client": "^1.4.33",
+    "game-server-lib": "^1.0.6",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
