--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
     "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "socket.io-client": "^2.3.0",
     "the-game-lib": "^1.0.23",
     "typescript": "^3.9"
